# swagger/swagger.yml
@@ -100,6 +100,10 @@ paths:
         description: 姓名
         type: string
       - in: query
+        name: role
+        description: 角色
+        type: string
+      - in: query
         name: random
         description: 固定随机字符串，用以标识当前会话的唯一性
         type: string
